--- a/starweb/app/views/quotations/show.html.erb
+++ b/starweb/app/views/quotations/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Currencies:</strong>
-  <%= @quotation.currencies %>
+  <strong>Currency:</strong>
+  <%= @quotation.currency %>
 </p>
 
 <p>
