--- a/starweb/app/assets/stylesheets/custom-styles.css
+++ b/starweb/app/assets/stylesheets/custom-styles.css
@@ -6,6 +6,13 @@ body {
     background: #1F2837;
 }
 
+select {
+  display: block !important;
+  height: 35px;
+  font-size: 15px;
+  border: solid 2px cornflowerblue;
+}
+
 a:hover, a:focus{
   color: #cecece !important;
 }
