--- a/starweb/app/views/currencies/_form.html.erb
+++ b/starweb/app/views/currencies/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label :name %><br>
     <%= form.text_field :name %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: 'btn btn-primary'  %>
   </div>
 <% end %>
