--- a/starweb/app/views/currencies/edit.html.erb
+++ b/starweb/app/views/currencies/edit.html.erb
@@ -1,6 +1,33 @@
-<h1>Editing Currency</h1>
+<div class="header"> 
+  <h1 class="page-header">
+    Colores
+  </h1>
+  <ol class="breadcrumb">
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Moneda</a></li>
+    <li class="active">Editar</li>
+  </ol> 
+</div>
 
-<%= render 'form', currency: @currency %>
+<div id="page-inner"> 
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="card-content"> 
+          <p>
+            <h3>Editar Moneda</h3><br>
 
-<%= link_to 'Show', @currency %> |
-<%= link_to 'Back', currencies_path %>
+			       <%= render 'form', currency: @currency %><br>
+
+			       <%= link_to 'Volver', currencies_path %>
+          </p>
+
+          <div class="clearBoth"><br/></div>
+
+        </div>
+      </div>
+    </div>
+    <!-- /. PAGE INNER  -->
+  </div>
+  <!-- /. PAGE WRAPPER  -->
+</div>
