--- a/starweb/app/views/currencies/index.html.erb
+++ b/starweb/app/views/currencies/index.html.erb
@@ -1,27 +1,48 @@
-<p id="notice"><%= notice %></p>
+<div class="header"> 
+  <h1 class="page-header">
+    Monedas
+  </h1>
+  <ol class="breadcrumb">
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Monedas</a></li>
+    <li class="active">Index</li>
+  </ol> 
+</div>
 
-<h1>Currencies</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @currencies.each do |currency| %>
-      <tr>
-        <td><%= currency.name %></td>
-        <td><%= link_to 'Show', currency %></td>
-        <td><%= link_to 'Edit', edit_currency_path(currency) %></td>
-        <td><%= link_to 'Destroy', currency, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Currency', new_currency_path %>
+<div id="page-inner">
+  <div class="row">
+    <div class="col-md-12">
+      <p id="notice"><%= notice %></p>
+      <div class="card">
+        <div class="card-content"> 
+          <div class="row">
+            <div class="card-content">
+              <h3>Monedas registradas</h3><br>
+              <div class="table-responsive">
+                <table class="table table-striped table-bordered table-hover">
+                  <thead>
+                    <tr>
+                      <th>Moneda</th>
+                      <th>Editar</th>
+                      <th>Eliminar</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% @currencies.each do |currency| %>
+                    <tr>
+                      <td><%= currency.name %></td>
+                      <td><%= link_to '', edit_currency_path(currency) , class: 'fas fa-edit' %></td>
+                      <td><%= link_to '', currency, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
+                    </tr>
+                    <% end %>
+                  </tbody>
+                </table>
+                <%= link_to 'Nueva moneda', new_currency_path %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
