--- a/starweb/app/views/currencies/new.html.erb
+++ b/starweb/app/views/currencies/new.html.erb
@@ -1,5 +1,33 @@
-<h1>New Currency</h1>
+<div class="header"> 
+  <h1 class="page-header">
+    Monedas
+  </h1>
+  <ol class="breadcrumb">
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Monedas</a></li>
+    <li class="active">Nuevo</li>
+  </ol> 
 
-<%= render 'form', currency: @currency %>
+</div>
 
-<%= link_to 'Back', currencies_path %>
+<div id="page-inner"> 
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+        <div class="card-content"> 
+          <p>
+			<h1>Nueva moneda</h1><br>
+
+			<%= render 'form', currency: @currency %><br>
+
+			<%= link_to 'Volver', currencies_path %>
+          </p>
+
+          <div class="clearBoth"><br/></div>
+        </div>
+      </div>
+    </div>
+    <!-- /. PAGE INNER  -->
+  </div>
+  <!-- /. PAGE WRAPPER  -->
+</div>
