--- a/starweb/app/views/quotations/index.html.erb
+++ b/starweb/app/views/quotations/index.html.erb
@@ -17,7 +17,7 @@
         <div class="card-content"> 
           <div class="row">
             <div class="card-content">
-              <h3>Cotizaciones del dia</h3><br>
+              <h3>Cotizaciones registradas</h3><br>
               <div class="table-responsive">
                 <table class="table table-striped table-bordered table-hover">
                   <thead>
@@ -25,17 +25,20 @@
                       <th>Moneda</th>
                       <th>Compra</th>
                       <th>Venta</th>
+                      <th>Fecha</th>
+                      <th>Editar</th>
+                      <th>Eliminar</th>
                     </tr>
                   </thead>
                   <tbody>
                     <% @quotations.each do |quotation| %>
                     <tr>
-                      <td><%= quotation.currencies %></td>
+                      <td><%= quotation.currency.name %></td>
                       <td><%= quotation.purchase %></td>
                       <td><%= quotation.sale %></td>
-                      <td><%= link_to 'Editar', edit_quotation_path(quotation) , class: 'fas fa-edit' %></td>
-                      <td><%= link_to 'Eliminar', quotation, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
-                    </tr>
+                      <td><%= quotation.updated_at %></td>
+                      <td><%= link_to '', edit_quotation_path(quotation) , class: 'fas fa-edit' %></td>
+                      <td><%= link_to '', quotation, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
                     <% end %>
                   </tbody>
                 </table>
