--- a/starweb/app/views/products/_form.html.erb
+++ b/starweb/app/views/products/_form.html.erb
@@ -28,8 +28,8 @@
 
   <div class="field">
     <%= form.label :image %>
-    <%= form.text_field :image %>
-  </div>
+    <%= form.file_field :image, class: 'field' %>
+  </div><br>
 
   <div class="field">
     <%= form.label :size %>
@@ -42,6 +42,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
