--- a/starweb/app/views/clients/index.html.erb
+++ b/starweb/app/views/clients/index.html.erb
@@ -1,41 +1,62 @@
-<p id="notice"><%= notice %></p>
+<div class="header"> 
+  <h1 class="page-header">
+    Clientes
+  </h1>
+  <ol class="breadcrumb">
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Clientes</a></li>
+    <li class="active">Index</li>
+  </ol> 
+</div>
 
-<h1>Clients</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Firstname</th>
-      <th>Lastname</th>
-      <th>Doc/ruc</th>
-      <th>Telephone</th>
-      <th>Date nac</th>
-      <th>Mail</th>
-      <th>City</th>
-      <th>Country</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @clients.each do |client| %>
-      <tr>
-        <td><%= client.firstname %></td>
-        <td><%= client.lastname %></td>
-        <td><%= client.doc/ruc %></td>
-        <td><%= client.telephone %></td>
-        <td><%= client.date_nac %></td>
-        <td><%= client.mail %></td>
-        <td><%= client.city %></td>
-        <td><%= client.country %></td>
-        <td><%= link_to 'Show', client %></td>
-        <td><%= link_to 'Edit', edit_client_path(client) %></td>
-        <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Client', new_client_path %>
+<div id="page-inner">
+  <div class="row">
+    <div class="col-md-12">
+      <p id="notice"><%= notice %></p>
+      <div class="card">
+        <div class="card-content"> 
+          <div class="row">
+            <div class="card-content">
+              <h3>Clientes registrados</h3><br>
+              <div class="table-responsive">
+                <table class="table table-striped table-bordered table-hover">
+                  <thead>
+                    <tr>
+                      <th>Nombre</th>
+                      <th>Apellido</th>
+                      <th>Doc/ruc</th>
+                      <th>Telefóno</th>
+                      <th>Nacimiento</th>
+                      <th>Correo</th>
+                      <th>Ciudad</th>
+                      <th>País</th>
+                      <th>Editar</th>
+                      <th>Eliminar</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% @clients.each do |client| %>
+                    <tr>
+                      <td><%= client.firstname %></td>
+                      <td><%= client.lastname %></td>
+                      <td><%= client.doc_ruc %></td>
+                      <td><%= client.telephone %></td>
+                      <td><%= client.date_nac %></td>
+                      <td><%= client.mail %></td>
+                      <td><%= client.city %></td>
+                      <td><%= client.country %></td>
+                      <td><%= link_to '', edit_client_path(client), class: 'fas fa-edit' %></td>
+                      <td><%= link_to '' , client, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
+                    </tr>
+                    <% end %>
+                  </tbody>
+                </table>
+                <%= link_to 'Nuevo cliente', new_client_path %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
