--- a/starweb/app/views/products/index.html.erb
+++ b/starweb/app/views/products/index.html.erb
@@ -1,37 +1,57 @@
-<p id="notice"><%= notice %></p>
+<div class="header"> 
+  <h1 class="page-header">
+    Productos
+  </h1>
+  <ol class="breadcrumb">
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Productos</a></li>
+    <li class="active">Index</li>
+  </ol> 
+</div>
 
-<h1>Products</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Quantity</th>
-      <th>Image</th>
-      <th>Size</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.price %></td>
-        <td><%= product.quantity %></td>
-        <td><%= product.image %></td>
-        <td><%= product.size %></td>
-        <td><%= product.description %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Product', new_product_path %>
+<div id="page-inner">
+  <div class="row">
+    <div class="col-md-12">
+      <p id="notice"><%= notice %></p>
+      <div class="card">
+        <div class="card-content"> 
+          <div class="row">
+            <div class="card-content">
+              <h3>Productos registrados</h3><br>
+              <div class="table-responsive">
+                <table class="table table-striped table-bordered table-hover">
+                  <thead>
+                    <tr>
+                      <th>Nombre</th>
+                      <th>Precio</th>
+                      <th>Cantidad</th>
+                      <th>Imagen</th>
+                      <th>Tamaño</th>
+                      <th>Descripción</th>
+                      <th>Editar</th>
+                      <th>Eliminar</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% @products.each do |product| %>
+                    <tr>
+                      <td><%= product.name %></td>
+                      <td><%= product.price %></td>
+                      <td><%= product.quantity %></td>
+                      <td><%= image_tag product.image.url(:thumb)%></td>
+                      <td><%= product.size %></td>
+                      <td><%= product.description %></td>
+                      <td><%= link_to '', edit_product_path(product) , class: 'fas fa-edit' %></td>
+                      <td><%= link_to '', product, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
+                    <% end %>
+                  </tbody>
+                </table>
+                <%= link_to 'Nuevo producto', new_product_path %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
