--- a/starweb/app/views/sponsors/edit.html.erb
+++ b/starweb/app/views/sponsors/edit.html.erb
@@ -17,7 +17,7 @@
           <p>
             <h3>Editar Auspiciante</h3><br>
             
-            <%= render 'form', sponsor: @sponsor %>
+            <%= render 'form', sponsor: @sponsor %><br>
 
             <%= link_to 'Volver', sponsors_path %>
           </p>
