--- a/starweb/app/views/orders/index.html.erb
+++ b/starweb/app/views/orders/index.html.erb
@@ -17,27 +17,39 @@
         <div class="card-content"> 
           <div class="row">
             <div class="card-content">
-              <h3>Pedidos creados</h3><br>
+              <h3>Pedidos registradas</h3><br>
               <div class="table-responsive">
                 <table class="table table-striped table-bordered table-hover">
                   <thead>
                     <tr>
-                      <th>Moneda</th>
+                      <th>Fecha de entrega</th>
+                      <th>Cliente</th>
+                      <th>Curso - Club</th>
+                      <th>Logo</th>
+                      <th>Estado del pedido</th>
                       <th>Editar</th>
                       <th>Eliminar</th>
                     </tr>
                   </thead>
+
                   <tbody>
-                    <% @currencies.each do |currency| %>
+                    <% @orders.each do |order| %>
                     <tr>
-                      <td><%= currency.name %></td>
-                      <td><%= link_to '', edit_currency_path(currency) , class: 'fas fa-edit' %></td>
-                      <td><%= link_to '', currency, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
+                      <td><%= order.deliver_date %></td>
+                      <td><%= order.client %></td>
+                      <td><%= order.course_club %></td>
+                      <td><%= order.logo %></td>
+                      <td><%= order.state %></td>
+                      <td><%= link_to '', edit_order_path(order), class: 'fas fa-edit' %></td>
+                      <td><%= link_to '', order, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
                     </tr>
                     <% end %>
                   </tbody>
                 </table>
-                <%= link_to 'Nueva moneda', new_currency_path %>
+
+                <br>
+
+                <%= link_to 'New Order', new_order_path %>
               </div>
             </div>
           </div>
