--- a/starweb/app/views/currencies/index.html.erb
+++ b/starweb/app/views/currencies/index.html.erb
@@ -1,10 +1,10 @@
 <div class="header"> 
   <h1 class="page-header">
-    Pedidos
+    Monedas
   </h1>
   <ol class="breadcrumb">
     <li><a href="#">Inicio</a></li>
-    <li><a href="#">Pedidos</a></li>
+    <li><a href="#">Monedas</a></li>
     <li class="active">Index</li>
   </ol> 
 </div>
@@ -17,7 +17,7 @@
         <div class="card-content"> 
           <div class="row">
             <div class="card-content">
-              <h3>Pedidos creados</h3><br>
+              <h3>Monedas creados</h3><br>
               <div class="table-responsive">
                 <table class="table table-striped table-bordered table-hover">
                   <thead>
