Pedidos - Agregados detalles del pedido y estructura modificada

--- a/starweb/app/assets/stylesheets/custom-styles.css
+++ b/starweb/app/assets/stylesheets/custom-styles.css
@@ -7,10 +7,9 @@ body {
 }
 
 [type="checkbox"]:not(:checked), [type="checkbox"]:checked {
-    position: unset;
+    position: initial;
     left: 0;
     opacity: 1;
-    display: none;
 }
 
 select {
