--- a/starweb/app/views/orders/edit.html.erb
+++ b/starweb/app/views/orders/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="header"> 
   <h1 class="page-header">
-    Pedidos
+    Colores
   </h1>
   <ol class="breadcrumb">
     <li><a href="#">Inicio</a></li>
-    <li><a href="#">Pedido</a></li>
+    <li><a href="#">Moneda</a></li>
     <li class="active">Editar</li>
   </ol> 
 </div>
@@ -15,11 +15,11 @@
       <div class="card">
         <div class="card-content"> 
           <p>
-            <h1>Editar pedido</h1>
+			<h1>Editing Pedido</h1>
 
-            <%= render 'form', order: @order %>
+			<%= render 'form', order: @order %>
 
-            <%= link_to 'Volver', currencies_path %>
+			<%= link_to 'Volver', orders_path %>
           </p>
 
           <div class="clearBoth"><br/></div>
