--- a/starweb/app/views/order_details/_form.html.erb
+++ b/starweb/app/views/order_details/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: info_detail, local: true) do |form| %>
-  <% if info_detail.errors.any? %>
+<%= form_with(model: order_detail, local: true) do |form| %>
+  <% if order_detail.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(info_detail.errors.count, "error") %> prohibited this info_detail from being saved:</h2>
+      <h2><%= pluralize(order_detail.errors.count, "error") %> prohibited this order_detail from being saved:</h2>
 
       <ul>
-      <% info_detail.errors.full_messages.each do |message| %>
+      <% order_detail.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
