--- a/starweb/app/views/orders/index.html.erb
+++ b/starweb/app/views/orders/index.html.erb
@@ -22,13 +22,15 @@
                 <table class="table table-striped table-bordered table-hover">
                   <thead>
                     <tr>
-                      <th>Client</th>
-                      <th>Deliver date</th>
-                      <th>Course club</th>
+                      <th>Cliente</th>
+                      <th>Fecha del pedido</th>
+                      <th>Fecha de Entrega</th>
+                      <th>Curso o Club</th>
                       <th>Logo</th>
-                      <th>State</th>
-                      <th>Notes</th>
-                      <th>Quantity</th>
+                      <th>Notas</th>
+                      <th>Cantidad</th>
+                      <th>Auspiciantes</th>
+                      <th>Estado</th>
                       <th>Ver</th>
                       <th>Editar</th>
                       <th>Eliminar</th>
@@ -39,13 +41,18 @@
                     <% @orders.each do |order| %>
                       <tr>
                         <td><%= order.client.firstname %></td>
+                        <td><%= order.created_at %></td>
                         <td><%= order.deliver_date %></td>
                         <td><%= order.course_club %></td>
                         <td><%= order.logo %></td>
-                        <td><%= order.state %></td>
                         <td><%= order.notes %></td>
                         <td><%= order.quantity %></td>
-                        <td><%= link_to 'Ver', order %></td>
+                        <td><% order.sponsors.each do |sponsor|%>
+                            <%= sponsor.name %>
+                          <%end%>
+                        </td>
+                        <td><%= order.state %></td>
+                        <td><%= link_to '', order, class: 'fas fa-eye' %></td>
                         <td><%= link_to '', edit_order_path(order) , class: 'fas fa-edit' %></td>
                         <td><%= link_to '', order, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
                       </tr>
